--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <script src="http://localhost:8097"></script>
+     <script>
+        (function () {
+            if (sessionStorage.redirect) {
+                const redirect = sessionStorage.redirect;
+                delete sessionStorage.redirect;
+                window.history.replaceState(null, null, redirect);
+            }
+        })();
+    </script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
